kubernetes/02-apps/03-media/07-prowlarr-qbittorrent-gluetun/02-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: prowlarr-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.media.kalexlab.xyz`)
      services:
        - name: prowlarr-qbittorrent
          port: 9696
  tls:
    secretName: prowlarr-ingress-certificate-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: torrent-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`torrent.media.kalexlab.xyz`)
      services:
        - name: prowlarr-qbittorrent
          port: 8080
  tls:
    secretName: torrent-ingress-certificate-secret
